--- a/MENU.html
+++ b/MENU.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <div id="layout-content">
-<p>Home <a href="index.html">index.html</a> <br />
-Research Interests <a href="Research.html">Research.html</a> <br />
-Funstuff <a href="Hobbies.html">Hobbies.html</a> <br /></p>
+<p><b>Home</b> <a href="index.html">index.html</a> <br />
+<b>Research Interests</b> <a href="Research.html">Research.html</a> <br />
+<b>Funstuff</b> <a href="Hobbies.html">Hobbies.html</a> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-24 23:40:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-09-25 00:01:10 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
