--- a/Research.html
+++ b/Research.html
@@ -11,9 +11,9 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="Research.html" class="current">Research&nbsp;Interests</a></div>
-<div class="menu-item"><a href="Hobbies.html">Funstuff</a></div>
+<div class="menu-item"><a href="index.html"><b>Home</b></a></div>
+<div class="menu-item"><a href="Research.html" class="current"><b>Research&nbsp;Interests</b></a></div>
+<div class="menu-item"><a href="Hobbies.html"><b>Funstuff</b></a></div>
 </td>
 <td id="layout-content">
 <p><img src="images/research.jpg"width="200",height="200" ></p>
@@ -35,7 +35,7 @@ to customers?&rdquo; or &ldquo;What are some genes that mutate in correlation wi
 <p>For a full list of publications, please refer to my <a href="https://scholar.google.com/citations?user=S0Cu-OsAAAAJ&amp;hl=en">google scholar profile.</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-24 23:40:11 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-09-25 00:01:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
