--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="Research.html">Research&nbsp;Interests</a></div>
-<div class="menu-item"><a href="Hobbies.html">Funstuff</a></div>
+<div class="menu-item"><a href="index.html" class="current"><b>Home</b></a></div>
+<div class="menu-item"><a href="Research.html"><b>Research&nbsp;Interests</b></a></div>
+<div class="menu-item"><a href="Hobbies.html"><b>Funstuff</b></a></div>
 </td>
 <td id="layout-content">
 <h2>Karthik Narayanan Mohan</h2>
