--- a/Hobbies.html
+++ b/Hobbies.html
@@ -14,9 +14,9 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="Research.html">Research&nbsp;Interests</a></div>
-<div class="menu-item"><a href="Hobbies.html" class="current">Funstuff</a></div>
+<div class="menu-item"><a href="index.html"><b>Home</b></a></div>
+<div class="menu-item"><a href="Research.html"><b>Research&nbsp;Interests</b></a></div>
+<div class="menu-item"><a href="Hobbies.html" class="current"><b>Funstuff</b></a></div>
 </td>
 <td id="layout-content">
 <p></p>
